--- a/src/App.css
+++ b/src/App.css
@@ -25,3 +25,24 @@
   display: inline-block;
   margin: 6%;
 }
+
+.box {
+  display: flex;
+  flex-flow: column;
+  height: 100vh;
+}
+
+.box .header {
+  flex: 0 1 auto;
+}
+
+.box .content {
+  flex: 1 1 auto;
+  background-color: #1E1D2B;
+}
+
+.box .footer {
+  flex: 0 1 40px;
+  background-color: #252736;
+  color: #FFFFFF;
+}
